<resources>
    <string name="app_name">Shopping For All</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="sign_in">Sign in</string>
    <string name="child_indicator">-</string>

    <string-array name="list_categories_array">
        <item>All Lists</item>
        <item>Weekly Groceries</item>
        <item>Pharmacy Items</item>
        <item>Office Supplies</item>
        <item>Errands</item>
        <item>Recipes</item>
        <item>Holiday Dinner</item>
    </string-array>

    <string name="my_lists">My Lists</string>
    <string name="group_lists">Group Lists</string>
    <string name="featured_lists">Featured Lists</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="drawer_items">
        <item>Sign Out</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--item fragment -->
    <string name="scan">scan </string>
    <string-array name="categories_array">
        <item>All</item>
        <item>Dairy</item>
        <item>Meat</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Junk Food</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="insert">Insert Code</string>
    <string name="add">Add</string>
    <string name="price">Price:</string>
    <string name="category">Category:</string>
    <string name="store">Store:</string>
    <string name="database_does_not_exist">Database Doesn\'t Exist</string>
    <string name="add_code">Add List By Code</string>
    <string name="use_code">Use Code</string>
    <string name="cancel">Cancel</string>
    <string name="add_group">Add Group List</string>
    <string name="add_personal">Add Personal List</string>
    <string name="insert_title">Insert Title</string>
    <string name="item_name">Temp</string>
    <string name="provider">Bringer:</string>
</resources>

