<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/my_list"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/my_lists"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/group_list"
        android:enabled="true"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/group_lists"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/featured_list"
        android:enabled="true"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/featured_lists"
        app:showAsAction="ifRoom" />
</menu>
